# AF-GCN-GAT_wGS

./: README.md  reduce_results2023.csv  test_solver_approx.py  training_gat2_11f.py
af_reader_py/: Cargo.toml  pyproject.toml
af_reader_py/.env/: pyvenv.cfg
af_reader_py/.env/Scripts/: activate  activate.bat
af_reader_py/src/: graph.rs  lib.rs  simple_grounded_semantics_solver2.rs
af_reader_py/src/gradualsemantics/: bbs.rs  card_based.rs  categorizer.rs  euclidian_based.rs  fuzzing.rs  max_based.rs  mod.rs  no_self_att_hcat.rs  perso.rs  vdp.rs
