[package]
name = "af_reader_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "af_reader_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21"
ahash = "0.8"
rustworkx-core = "0.14"
simple-pagerank = { git = "https://github.com/Paulo-21/pagerank-rs", branch = "master" }
graph = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip=true
panic = 'abort'